--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
       rel="stylesheet"
     />
 
-    <title>F1 Scoreboard</title>
+    <title>F1 Stats</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
